--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   curved_navigation_bar: ^1.0.1
   flutter_inappwebview: ^6.0.0
+  connectivity_plus: ^6.0.3
+
   provider:
 
 dev_dependencies:
